--- a/front/package.json
+++ b/front/package.json
@@ -19,8 +19,8 @@
     "cross-env": "^5.2.0",
     "element-ui": "^2.6.1",
     "js-cookie": "^2.2.0",
-    "node-sass": "^4.11.0",
-    "nuxt": "^2.0.0",
+    "node-sass": "^4.12.0",
+    "nuxt": "^2.6.3",
     "nuxt-fontawesome": "^0.4.0",
     "nuxt-onsenui-module": "^1.0.0",
     "nuxt-sass-resources-loader": "^2.0.5",
@@ -29,6 +29,7 @@
     "vue-qrcode-reader": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "tar": "^4.4.8"
   }
 }
